standards/gnds-2.0/gnds/c/src/v2.0/general/Mixed.h

// --- Const-aware handles.
typedef const struct MixedClass *const ConstHandle2ConstMixed;
typedef       struct MixedClass *const ConstHandle2Mixed;
typedef const struct MixedClass *      Handle2ConstMixed;
typedef       struct MixedClass *      Handle2Mixed;
// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstMixed
MixedDefaultConst();
// +++ Create, default
extern_c Handle2Mixed
MixedDefault();
// --- Create, general, const
extern_c Handle2ConstMixed
MixedCreateConst(
   const char *const label,
   ConstHandle2CovarianceMatrix *const covarianceMatrix, const size_t covarianceMatrixSize,
   ConstHandle2Sum *const sum, const size_t sumSize,
   ConstHandle2ConstShortRangeSelfScalingVariance shortRangeSelfScalingVariance
);
// +++ Create, general
extern_c Handle2Mixed
MixedCreate(
   const char *const label,
   ConstHandle2CovarianceMatrix *const covarianceMatrix, const size_t covarianceMatrixSize,
   ConstHandle2Sum *const sum, const size_t sumSize,
   ConstHandle2ConstShortRangeSelfScalingVariance shortRangeSelfScalingVariance
);
// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
MixedAssign(ConstHandle2Mixed self, ConstHandle2ConstMixed from);
// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
MixedDelete(ConstHandle2ConstMixed self);
// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
MixedRead(ConstHandle2Mixed self, const char *const filename);
// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
MixedWrite(ConstHandle2ConstMixed self, const char *const filename);
// +++ Print to standard output, in our prettyprinting format
extern_c int
MixedPrint(ConstHandle2ConstMixed self);
// +++ Print to standard output, as XML
extern_c int
MixedPrintXML(ConstHandle2ConstMixed self);
// +++ Print to standard output, as JSON
extern_c int
MixedPrintJSON(ConstHandle2ConstMixed self);
// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
MixedLabelHas(ConstHandle2ConstMixed self);
// +++ Get
// +++ Returns by value
extern_c const char *
MixedLabelGet(ConstHandle2ConstMixed self);
// +++ Set
extern_c void
MixedLabelSet(ConstHandle2Mixed self, const char *const label);
// -----------------------------------------------------------------------------
// Child: covarianceMatrix
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
MixedCovarianceMatrixHas(ConstHandle2ConstMixed self);
// +++ Clear
extern_c void
MixedCovarianceMatrixClear(ConstHandle2Mixed self);
// +++ Size
extern_c size_t
MixedCovarianceMatrixSize(ConstHandle2ConstMixed self);
// +++ Add
extern_c void
MixedCovarianceMatrixAdd(ConstHandle2Mixed self, ConstHandle2ConstCovarianceMatrix covarianceMatrix);
// --- Get, by index \in [0,size), const
extern_c Handle2ConstCovarianceMatrix
MixedCovarianceMatrixGetConst(ConstHandle2ConstMixed self, const size_t index_);
// +++ Get, by index \in [0,size), non-const
extern_c Handle2CovarianceMatrix
MixedCovarianceMatrixGet(ConstHandle2Mixed self, const size_t index_);
// +++ Set, by index \in [0,size)
extern_c void
MixedCovarianceMatrixSet(
   ConstHandle2Mixed self,
   const size_t index_,
   ConstHandle2ConstCovarianceMatrix covarianceMatrix
);
// +++ Has, by label
extern_c int
MixedCovarianceMatrixHasByLabel(
   ConstHandle2ConstMixed self,
   const char *const label
);
// --- Get, by label, const
extern_c Handle2ConstCovarianceMatrix
MixedCovarianceMatrixGetByLabelConst(
   ConstHandle2ConstMixed self,
   const char *const label
);
// +++ Get, by label, non-const
extern_c Handle2CovarianceMatrix
MixedCovarianceMatrixGetByLabel(
   ConstHandle2Mixed self,
   const char *const label
);
// +++ Set, by label
extern_c void
MixedCovarianceMatrixSetByLabel(
   ConstHandle2Mixed self,
   const char *const label,
   ConstHandle2ConstCovarianceMatrix covarianceMatrix
);
// +++ Has, by type
extern_c int
MixedCovarianceMatrixHasByType(
   ConstHandle2ConstMixed self,
   const char *const type
);
// --- Get, by type, const
extern_c Handle2ConstCovarianceMatrix
MixedCovarianceMatrixGetByTypeConst(
   ConstHandle2ConstMixed self,
   const char *const type
);
// +++ Get, by type, non-const
extern_c Handle2CovarianceMatrix
MixedCovarianceMatrixGetByType(
   ConstHandle2Mixed self,
   const char *const type
);
// +++ Set, by type
extern_c void
MixedCovarianceMatrixSetByType(
   ConstHandle2Mixed self,
   const char *const type,
   ConstHandle2ConstCovarianceMatrix covarianceMatrix
);
// +++ Has, by productFrame
extern_c int
MixedCovarianceMatrixHasByProductFrame(
   ConstHandle2ConstMixed self,
   const char *const productFrame
);
// --- Get, by productFrame, const
extern_c Handle2ConstCovarianceMatrix
MixedCovarianceMatrixGetByProductFrameConst(
   ConstHandle2ConstMixed self,
   const char *const productFrame
);